@@ -11,26 +11,35 @@ namespace FeatureAdmin
     /// </summary>
     class FeatureActivator
     {
-        public enum Action  { Activating, Deactivating };
+        public enum Action  { None, Activating, Deactivating };
+        public enum Forcefulness { None, Regular, Forcible };
 
-        /// <summary>
-        /// Delegate to handle exception logging
-        /// </summary>
-        /// <param name="location"></param>
-        public delegate void ExceptionLoggerHandler(Exception exc, string msg);
+        #region Logging & exception logging
+        public delegate void InfoLoggerHandler(Location location, string msg);
+        public event InfoLoggerHandler InfoLoggingListeners;
+        protected void LogInfo(Location location, string msg)
+        {
+            if (InfoLoggingListeners != null)
+            {
+                InfoLoggingListeners(location, msg);
+            }
+        }
+        public delegate void ExceptionLoggerHandler(Exception exc, Location location, string msg);
         public event ExceptionLoggerHandler ExceptionLoggingListeners;
-        protected void LogException(Exception exc, string msg)
+        protected void LogException(Exception exc, Location location, string msg)
         {
             if (ExceptionLoggingListeners != null)
             {
-                ExceptionLoggingListeners(exc, msg);
+                ExceptionLoggingListeners(exc, location, msg);
             }
         }
+        #endregion
 
         public int Activations { get; private set; }
         public int ActivationAttempts { get; private set; }
         private FeatureDatabase _featureDb;
         private Action _action;
+        private Forcefulness _forcefulness;
         private FeatureSet _featureset = null;
 
         public FeatureActivator(FeatureDatabase featureDb, Action action, FeatureSet featureSet)
@@ -41,13 +50,14 @@ namespace FeatureAdmin
         }
 
         /// <summary>activate features in the whole farm</summary>
-        public void TraverseActivateFeaturesInFarm()
+        public void TraverseActivateFeaturesInFarm(Forcefulness forcefulness)
         {
+            _forcefulness = forcefulness;
             ActivateFeaturesInFarm();
 
             foreach (SPWebApplication webapp in WebAppEnumerator.GetAllWebApps())
             {
-                TraverseActivateFeaturesInWebApplication(webapp);
+                TraverseActivateFeaturesInWebApplication(webapp, forcefulness);
             }
         }
         /// <summary>
@@ -55,13 +65,15 @@ namespace FeatureAdmin
         /// </summary>
         private void ActivateFeaturesInFarm()
         {
+            Location location = LocationManager.GetLocation(SPFarm.Local);
             foreach (Feature feature in _featureset.FarmFeatures)
             {
-                PerformAction(SPFarm.Local, SPWebService.ContentService.Features, feature);
+                PerformAction(location, SPWebService.ContentService.Features, feature);
             }
         }
-        public void TraverseActivateFeaturesInWebApplication(SPWebApplication webapp)
+        public void TraverseActivateFeaturesInWebApplication(SPWebApplication webapp, Forcefulness forcefulness)
         {
+            _forcefulness = forcefulness;
             ActivateFeaturesInWebApp(webapp);
 
             if (_featureset.SiteCollectionFeatureCount == 0
@@ -74,7 +86,7 @@ namespace FeatureAdmin
             {
                 try
                 {
-                    TraverseActivateFeaturesInSiteCollection(site);
+                    TraverseActivateFeaturesInSiteCollection(site, forcefulness);
                 }
                 finally
                 {
@@ -82,8 +94,9 @@ namespace FeatureAdmin
                 }
             }
         }
-        public void TraverseActivateFeaturesInSiteCollection(SPSite site)
+        public void TraverseActivateFeaturesInSiteCollection(SPSite site, Forcefulness forcefulness)
         {
+            _forcefulness = forcefulness;
             ActivateFeaturesInSiteCollection(site);
 
             if (_featureset.WebFeatureCount == 0)
@@ -94,7 +107,7 @@ namespace FeatureAdmin
             {
                 try
                 {
-                    ActivateFeaturesInWeb(web);
+                    ActivateFeaturesInWeb(web, forcefulness);
                 }
                 finally
                 {
@@ -107,9 +120,10 @@ namespace FeatureAdmin
         /// </summary>
         private void ActivateFeaturesInWebApp(SPWebApplication webapp)
         {
+            Location webappLoc = LocationManager.GetLocation(webapp);
             foreach (Feature feature in _featureset.WebAppFeatures)
             {
-                PerformAction(webapp, SPWebService.ContentService.Features, feature);
+                PerformAction(webappLoc, SPWebService.ContentService.Features, feature);
             }
         }
         /// <summary>
@@ -117,19 +131,22 @@ namespace FeatureAdmin
         /// </summary>
         private void ActivateFeaturesInSiteCollection(SPSite site)
         {
+            Location siteLoc = LocationManager.GetLocation(site);
             foreach (Feature feature in _featureset.SiteCollectionFeatures)
             {
-                PerformAction(site, site.Features, feature);
+                PerformAction(siteLoc, site.Features, feature);
             }
         }
-        public void ActivateFeaturesInWeb(SPWeb web)
+        public void ActivateFeaturesInWeb(SPWeb web, Forcefulness forcefulness)
         {
+            _forcefulness = forcefulness;
+            Location webLoc = LocationManager.GetLocation(web);
             foreach (Feature feature in _featureset.WebFeatures)
             {
-                PerformAction(web, web.Features, feature);
+                PerformAction(webLoc, web.Features, feature);
             }
         }
-        private void PerformAction(object locobj, SPFeatureCollection spFeatureCollection, Feature feature)
+        private void PerformAction(Location location, SPFeatureCollection spFeatureCollection, Feature feature)
         {
             try
             {
@@ -138,11 +155,29 @@ namespace FeatureAdmin
                     if (!(spFeatureCollection[feature.Id] is SPFeature))
                     {
                         ++ActivationAttempts;
-                        spFeatureCollection.Add(feature.Id);
-                        if ((spFeatureCollection[feature.Id] is SPFeature))
+                        try
                         {
-                            _featureDb.RecordFeatureActivation(locobj, feature.Id);
-                            ++Activations;
+                            spFeatureCollection.Add(feature.Id);
+                            if ((spFeatureCollection[feature.Id] is SPFeature))
+                            {
+                                _featureDb.RecordFeatureActivationAtLocation(location, feature.Id);
+                                ++Activations;
+                                string msg = string.Format("Activated feature {0} ({1}:{2}) from location",
+                                    feature.Id, feature.Scope, feature.Name);
+                                LogInfo(location, msg);
+                            }
+                            else
+                            {
+                                string msg = string.Format("Failure activating feature {0} ({1}:{2}) from location",
+                                    feature.Id, feature.Scope, feature.Name);
+                                LogInfo(location, msg);
+                            }
+                        }
+                        catch (Exception exc)
+                        {
+                            string msg = string.Format("Exception activating feature {0} ({1}:{2}) from location",
+                                feature.Id, feature.Scope, feature.Name);
+                            LogException(exc, location, msg);
                         }
                     }
                 }
@@ -151,24 +186,39 @@ namespace FeatureAdmin
                     if ((spFeatureCollection[feature.Id] is SPFeature))
                     {
                         ++ActivationAttempts;
-                        spFeatureCollection.Remove(feature.Id);
-                        if (!(spFeatureCollection[feature.Id] is SPFeature))
+                        try
                         {
-                            _featureDb.RecordFeatureDeactivation(locobj, feature.Id);
-                            ++Activations;
+                            spFeatureCollection.Remove(feature.Id);
+                            if (!(spFeatureCollection[feature.Id] is SPFeature))
+                            {
+                                _featureDb.RecordFeatureDeactivationAtLocation(location, feature.Id);
+                                ++Activations;
+                                string msg = string.Format("Removed feature {0} ({1}:{2}) from location",
+                                    feature.Id, feature.Scope, feature.Name);
+                                LogInfo(location, msg);
+
+                            }
+                            else
+                            {
+                                string msg = string.Format("Failure removing feature {0} ({1}:{2}) from location",
+                                    feature.Id, feature.Scope, feature.Name);
+                                LogInfo(location, msg);
+                            }
+                        }
+                        catch (Exception exc)
+                        {
+                            string msg = string.Format("Exception removing feature {0} ({1}:{2}) from location",
+                                feature.Id, feature.Scope, feature.Name);
+                            LogException(exc, location, msg);
                         }
                     }
                 }
             }
             catch (Exception exc)
             {
-                LogException(exc, string.Format(
-                    "{0} feature {1} on {2}: {3}",
-                    _action,
-                    feature.Id,
-                    feature.Scope,
-                    LocationManager.SafeDescribeObject(locobj)
-                    ));
+                string msg = string.Format("Exception {0} feature {1} ({2}:{3}) at location",
+                    _action, feature.Id, feature.Scope, feature.Name);
+                LogException(exc, location, msg);
             }
         }
     }
