@@ -60,3 +60,5 @@ Move "Clear Log" button into Log panel
 
 March, 2016 -- Perry
 Rework preprocessor definitions (SP2007, SP2010, SP2013) so they are inclusive
+Enhance feature deactivation traversals with better exception & logging
+  and add prompt to choose whether to use Force flag
